--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.37MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.15MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-210.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇯🇵 日本-3.73MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
+  - {name: 🇨🇳 中国-4.37MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.77MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.04MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.55MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.53MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.12MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-210.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.55MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.53MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
